Fix UI spacing and change clock to 12-hour format

--- a/pi5/static/css/ddm_style.css
+++ b/pi5/static/css/ddm_style.css
@@ -107,7 +107,7 @@ body {
     font-size: 2.5em;
     font-weight: 900;
     line-height: 1;
-    letter-spacing: 2px;
+    letter-spacing: 0px;
 }
 
 .main-title .letter {
@@ -116,9 +116,9 @@ body {
         3px 3px 8px rgba(0, 0, 0, 0.2);
 }
 
-.main-title .space {
+.main-title .word-space {
     display: inline-block;
-    width: 0.3em;
+    width: 0.4em;
 }
 
 .sub-title {
